<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/studentListEditorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFBF00"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".StudentListEditorActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            style="@style/StudentList2Style"
            android:fontFamily="sans-serif"
            android:text="@string/student_overview"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
            android:textStyle="bold|italic" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">


            <EditText
                android:id="@+id/edit_student_name"
                style="@style/StudentEditorFieldStyle"
                android:hint="@string/hint_student_name"
                android:inputType="textCapWords"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="italic" />


            <EditText
                android:id="@+id/edit_school"
                style="@style/StudentEditorFieldStyle"
                android:hint="@string/hint_school"
                android:inputType="textCapWords"
                android:textAlignment="center"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/container_grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView"
            style="@style/StudentList2Style"
            android:text="@string/position"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
            android:textStyle="bold|italic" />


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">


            <EditText
                android:id="@+id/edit_grade"
                style="@style/StudentEditorFieldStyle"
                android:hint="@string/hint_grade"
                android:inputType="number"
                android:textAlignment="center"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/label_grade_unit"
                style="@style/StudentEditorUnitsStyle"
                android:text="@string/grade_unit" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            style="@style/StudentList2Style"
            android:text="@string/academic_interest"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
            android:textStyle="bold|italic" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="2"
            android:orientation="vertical">


            <Spinner
                android:id="@+id/spinner_interest"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
